<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context="com.example.android.gamesquizlinear.MainActivity">

    <LinearLayout
        android:id="@+id/layout_question_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView

            android:id="@+id/quizImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:scaleType="fitStart"
            android:src="@drawable/q10_picture" />

        <TextView
            android:id="@+id/question_3_Box"
            style="@style/question_text"
            android:layout_weight="3"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/question_no_3" />


        <TextView
            android:id="@+id/text_question_3Box"
            style="@style/question_text"
            android:layout_weight="5"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/text_of_question_no_3"

            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/option_question_3_1_box"
            android:text="@string/option_no3_1_box"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/option_question_3_2_box"
            android:text="@string/option_no3_2_box"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/option_question_3_3_box"
            android:text="@string/option_no3_3_box"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/option_question_1_4_box"
            android:text="@string/option_no1_4_box"/>

    </LinearLayout>


    <Button
        android:id="@+id/help_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="help_Q3"
        android:text="@string/help" />

    <Button
        android:id="@+id/question_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/next" />


</RelativeLayout>
