<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context="com.example.android.gamesquizlinear.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_question_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/quizImage1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:scaleType="center"
                android:src="@drawable/q1_picture" />

            <TextView
                android:id="@+id/question_1"
                style="@style/question_text"
                android:layout_marginStart="@dimen/activity_vertical_margin"

                android:text="@string/question_no_1" />

            <TextView
                android:id="@+id/text_question_1"
                style="@style/question_text"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"

                android:text="@string/text_of_question_no_1" />

            <RadioGroup
                android:id="@+id/radio_group_question_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_weight="4"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/option_question_1_1"
                    style="@style/RadioButton"
                    android:text="@string/option_no1_1" />

                <RadioButton
                    android:id="@+id/option_question_1_2"
                    style="@style/RadioButton"
                    android:text="@string/option_no1_2" />


                <RadioButton
                    android:id="@+id/option_question_1_3"
                    style="@style/RadioButton"
                    android:text="@string/option_no1_3" />

                <RadioButton
                    android:id="@+id/option_question_1_4"
                    style="@style/RadioButton"
                    android:gravity="center_vertical"
                    android:text="@string/option_no1_4" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/hepl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="help_Q1"
            android:text="@string/help" />

        <Button
            android:id="@+id/question_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_question_1"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="next"
            android:text="@string/next" />

    </RelativeLayout>

</ScrollView>