<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context="com.example.android.gamesquizlinear.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_question_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView

                android:id="@+id/quizImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:scaleType="fitXY"
                android:src="@drawable/q9_picture" />

            <TextView
                android:id="@+id/question_1_Box"
                style="@style/question_text"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_weight="3"
                android:text="@string/question_no_2" />

            <TextView
                android:id="@+id/text_question_2Box"
                style="@style/question_text"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_weight="8"
                android:text="@string/text_of_question_no_2" />

            <CheckBox
                android:id="@+id/option_question_2_1_box"
                style="@style/CheckBox"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/option_no2_1_box" />

            <CheckBox
                android:id="@+id/option_question_2_2_box"
                style="@style/CheckBox"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/option_no2_2_box" />

            <CheckBox
                android:id="@+id/option_question_2_3_box"
                style="@style/CheckBox"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/option_no2_3_box" />

            <CheckBox
                android:id="@+id/option_question_2_4_box"
                style="@style/CheckBox"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/option_no2_4_box" />

        </LinearLayout>

        <Button
            android:id="@+id/help_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="help_Q2"
            android:text="@string/help" />

        <Button
            android:id="@+id/question_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_question_2"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/next" />

    </RelativeLayout>

</ScrollView>
